--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,15 @@
   ],
   "require": {
     "php": "~7.1",
-    "src-run/augustus-exception-library": "~0.8.3",
-    "src-run/augustus-utility-library": "~0.8.5",
+    "src-run/augustus-exception-library": "~0.8.4",
+    "src-run/augustus-utility-library": "~0.8.6",
     "symfony/var-dumper": "~3.4 | ~4.0"
   },
   "require-dev": {
     "codacy/coverage": "~1.0",
     "friendsofphp/php-cs-fixer": "~2.0",
-    "phpunit/phpunit": "~5.7",
-    "satooshi/php-coveralls": "~2.0"
+    "satooshi/php-coveralls": "~2.0",
+    "symfony/phpunit-bridge": "~4.0"
   },
   "autoload": {
     "psr-4": {
