--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   ],
   "require": {
     "php": "~7.1",
-    "src-run/augustus-exception-library": "~0.8.4",
-    "src-run/augustus-utility-library": "~0.8.6",
+    "src-run/augustus-exception-library": "^0.9.0",
+    "src-run/augustus-utility-library": "^0.9.0",
     "symfony/var-dumper": "~3.4 | ~4.0"
   },
   "require-dev": {
@@ -47,7 +47,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1-dev"
+      "dev-master": "0.2-dev"
     }
   }
 }
