--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,14 @@
 
 sudo     : false
 language : php
-php      : [ 7.1, 7.2, nightly ]
+php      : [ 7.1, 7.2, 7.3, 7.4snapshot, hhvm, hhvm-nightly ]
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: 7.4snapshot
+    - php: hhvm
+    - php: hhvm-nightly
 
 git:
   depth : 3
