--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,15 @@
     }
   ],
   "require": {
-    "php": "~7.1",
-    "src-run/augustus-exception-library": "^0.9.0",
+    "php": "^7.1",
     "src-run/augustus-utility-library": "^0.9.0",
-    "symfony/var-dumper": "~3.4 | ~4.0"
+    "symfony/var-dumper": "^3.4 | ^4.0"
   },
   "require-dev": {
-    "codacy/coverage": "~1.0",
-    "friendsofphp/php-cs-fixer": "~2.0",
-    "satooshi/php-coveralls": "~2.0",
-    "symfony/phpunit-bridge": "~4.0"
+    "codacy/coverage": "^1.4",
+    "friendsofphp/php-cs-fixer": "^2.13",
+    "php-coveralls/php-coveralls": "^2.1",
+    "symfony/phpunit-bridge": "^4.1"
   },
   "autoload": {
     "psr-4": {
@@ -47,7 +46,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2-dev"
+      "dev-master": "0.3-dev"
     }
   }
 }
