updated for php8.1

--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     }
   ],
   "require": {
-    "php": "^7.1",
-    "src-run/augustus-utility-library": "^0.9.0",
-    "symfony/var-dumper": "^3.4 | ^4.0"
+    "php": "^8.1",
+    "src-run/augustus-utility-library": "^0.10",
+    "symfony/var-dumper": "~4.1 | ~5.0"
   },
   "require-dev": {
     "codacy/coverage": "^1.4",
     "friendsofphp/php-cs-fixer": "^2.13",
     "php-coveralls/php-coveralls": "^2.1",
-    "symfony/phpunit-bridge": "^4.1"
+    "symfony/phpunit-bridge": "~4.1 | ~5.0"
   },
   "autoload": {
     "psr-4": {
