--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,13 @@
 
 sudo     : false
 language : php
-php      : [ 7.1, 7.2, 7.3, 7.4snapshot, hhvm, hhvm-nightly ]
+php      : [ 8.1, php-nightly, php-master, hhvm, hhvm-nightly ]
 
 matrix:
   fast_finish: true
   allow_failures:
-    - php: 7.4snapshot
+    - php: php-nightly
+    - php: php-master
     - php: hhvm
     - php: hhvm-nightly
 
