--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
   ],
   "require": {
     "php": "^8.1",
-    "src-run/augustus-utility-library": "^0.10",
-    "symfony/var-dumper": "~4.1 | ~5.0"
+    "src-run/augustus-utility-library": "~0.10",
+    "symfony/var-dumper": "~4.1 | ~5.0 | ~6.0"
   },
   "require-dev": {
-    "codacy/coverage": "^1.4",
-    "friendsofphp/php-cs-fixer": "^2.13",
-    "php-coveralls/php-coveralls": "^2.1",
-    "symfony/phpunit-bridge": "~4.1 | ~5.0"
+    "codacy/coverage": "~1.4",
+    "friendsofphp/php-cs-fixer": "~3.2",
+    "php-coveralls/php-coveralls": "~2.1",
+    "symfony/phpunit-bridge": "~4.1 | ~5.0 | ~6.0"
   },
   "autoload": {
     "psr-4": {
