--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,42 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/5.7/phpunit.xsd"
-         backupGlobals="true"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         bootstrap="./vendor/autoload.php">
-
-    <testsuites>
-        <testsuite name="src-run/cocoa-var-dumper-library">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true"
-                   processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">lib</directory>
-        </whitelist>
-    </filter>
-
-    <logging>
-        <log type="coverage-html"
-             target="var/build/coverage/"/>
-        <log type="coverage-clover"
-             target="var/build/clover.xml"/>
-    </logging>
-
-    <php>
-        <ini name="error_reporting"
-             value="-1" />
-        <ini name="intl.default_locale"
-             value="en" />
-        <ini name="intl.error_level"
-             value="0" />
-        <ini name="memory_limit"
-             value="-1" />
-    </php>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" backupGlobals="true" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" bootstrap="./vendor/autoload.php">
+  <coverage includeUncoveredFiles="true" processUncoveredFiles="true">
+    <include>
+      <directory suffix=".php">lib</directory>
+    </include>
+    <report>
+      <clover outputFile="var/build/clover.xml"/>
+      <html outputDirectory="var/build/coverage/"/>
+    </report>
+  </coverage>
+  <testsuites>
+    <testsuite name="src-run/cocoa-var-dumper-library">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
+  <logging/>
+  <php>
+    <ini name="error_reporting" value="-1"/>
+    <ini name="intl.default_locale" value="en"/>
+    <ini name="intl.error_level" value="0"/>
+    <ini name="memory_limit" value="-1"/>
+  </php>
 </phpunit>
